--- a/src/main/resources/org/fxpart/sample.fxml
+++ b/src/main/resources/org/fxpart/sample.fxml
@@ -10,7 +10,7 @@
     <Label styleClass="table-view" text="Autosuggest: get location" GridPane.columnIndex="1"
            GridPane.rowIndex="1"/>
 
-    <AutosuggestComboBoxList fx:id="autosuggest" stylesheets="@autosuggestfx.css" GridPane.columnIndex="1"
+    <AutosuggestComboBoxList fx:id="autosuggest" GridPane.columnIndex="1"
                              GridPane.rowIndex="2" prefWidth="300" minWidth="300" onShown="#clickOnShow"/>
 
     <columnConstraints>
