--- a/src/main/resources/org/fxpart/sample.fxml
+++ b/src/main/resources/org/fxpart/sample.fxml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.*?>
 <?import org.fxpart.combobox.AutosuggestComboBoxList?>
@@ -12,10 +12,9 @@
            GridPane.rowIndex="1"/>
 
     <AutosuggestComboBoxList fx:id="autosuggest" GridPane.columnIndex="1" GridPane.rowIndex="2" prefWidth="300"
-                             minWidth="300" onShown="#clickOnShow"/>
+                             minWidth="300"/>
 
-    <Button text="test focus" fx:id="testFocus" onAction="#testFocus" GridPane.columnIndex="1" GridPane.rowIndex="1"/>
-    <Button text="isfocus" fx:id="getFocus" GridPane.columnIndex="2" GridPane.rowIndex="1"/>
+    <ComboBox fx:id="cb" GridPane.columnIndex="2" GridPane.rowIndex="1"/>
 
     <columnConstraints>
         <ColumnConstraints maxWidth="216.0" minWidth="10.0" prefWidth="45.0"/>
