--- a/src/main/resources/org/fxpart/sample.fxml
+++ b/src/main/resources/org/fxpart/sample.fxml
@@ -4,6 +4,8 @@
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.*?>
 <?import org.fxpart.combobox.AutosuggestComboBoxList?>
+<?import javafx.scene.text.Text?>
+<?import javafx.scene.control.Button?>
 <GridPane alignment="center" hgap="10" prefHeight="441.0" prefWidth="924.0" vgap="10"
           xmlns="http://javafx.com/javafx/8.0.40" xmlns:fx="http://javafx.com/fxml/1"
           fx:controller="org.fxpart.Controller">
@@ -14,7 +16,12 @@
     <AutosuggestComboBoxList fx:id="autosuggest" GridPane.columnIndex="1" GridPane.rowIndex="2" prefWidth="300"
                              minWidth="300"/>
 
+
+
+    <Text fx:id="txt1" text="__" GridPane.columnIndex="4" GridPane.rowIndex="3" />
+
     <ComboBox fx:id="cb" GridPane.columnIndex="2" GridPane.rowIndex="1"/>
+<Button text="go" onAction="#click" GridPane.columnIndex="2" GridPane.rowIndex="2" />
 
     <columnConstraints>
         <ColumnConstraints maxWidth="216.0" minWidth="10.0" prefWidth="45.0"/>
