--- a/src/test/resources/org/fxpart/sample.fxml
+++ b/src/test/resources/org/fxpart/sample.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.*?>
 <?import org.fxpart.combobox.AutosuggestComboBoxList?>
 <GridPane alignment="center" hgap="10" prefHeight="441.0" prefWidth="924.0" vgap="10"
