--- a/src/main/resources/org/fxpart/sample.fxml
+++ b/src/main/resources/org/fxpart/sample.fxml
@@ -11,7 +11,7 @@
            GridPane.rowIndex="1"/>
 
     <AutosuggestComboBoxList fx:id="autosuggest" GridPane.columnIndex="1" GridPane.rowIndex="2" prefWidth="300"
-                             minWidth="300"/>
+                             minWidth="300" skinStatus=""/>
 
     <columnConstraints>
         <ColumnConstraints maxWidth="216.0" minWidth="10.0" prefWidth="45.0"/>
