--- a/src/test/resources/org/fxpart/testItem.fxml
+++ b/src/test/resources/org/fxpart/testItem.fxml
@@ -6,13 +6,11 @@
 <?import org.fxpart.combobox.AutosuggestComboBoxList?>
 <GridPane alignment="center" hgap="10" prefHeight="441.0" prefWidth="924.0" vgap="10"
           xmlns="http://javafx.com/javafx/8.0.40" xmlns:fx="http://javafx.com/fxml/1"
-          fx:controller="org.fxpart.Controller">
+          fx:controller="org.fxpart.ControllerWithItem">
 
-    <Button text="init Autosuggest" fx:id="go" onAction="#go" GridPane.columnIndex="2" GridPane.rowIndex="1"/>
-    <Button text="main" fx:id="go2" onAction="#go2" GridPane.columnIndex="3" GridPane.rowIndex="1"/>
+    <Button text="Launch Test" fx:id="go" onAction="#go" GridPane.columnIndex="2" GridPane.rowIndex="1"/>
 
-    <Label styleClass="table-view" text="Autosuggest: get location" GridPane.columnIndex="1"
-           GridPane.rowIndex="1"/>
+    <Label styleClass="table-view" text="Autosuggest: get location" GridPane.columnIndex="1" GridPane.rowIndex="1"/>
 
     <AutosuggestComboBoxList fx:id="autosuggest" GridPane.columnIndex="1" GridPane.rowIndex="2" prefWidth="300"
                              minWidth="300"/>
