--- a/src/test/resources/org/fxpart/testNoItem.fxml
+++ b/src/test/resources/org/fxpart/testNoItem.fxml
@@ -1,14 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.*?>
 <?import org.fxpart.combobox.AutosuggestComboBoxList?>
 <GridPane alignment="center" hgap="10" prefHeight="441.0" prefWidth="924.0" vgap="10"
           xmlns="http://javafx.com/javafx/8.0.40" xmlns:fx="http://javafx.com/fxml/1"
-          fx:controller="org.fxpart.Controller">
-
-    <Button text="Launch Test" fx:id="go" onAction="#go" GridPane.columnIndex="2" GridPane.rowIndex="1"/>
+          fx:controller="org.fxpart.ControllerNoItem">
 
     <Label styleClass="table-view" text="Autosuggest: get location" GridPane.columnIndex="1" GridPane.rowIndex="1"/>
 
