AUTOSFX-11 Load a value : manage isAcceptFreeValue

--- a/src/main/resources/org/fxpart/testNoItem.fxml
+++ b/src/main/resources/org/fxpart/testNoItem.fxml
@@ -1,16 +1,37 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 <?import org.fxpart.combobox.AutosuggestComboBoxList?>
 <GridPane alignment="center" hgap="10" prefHeight="441.0" prefWidth="924.0" vgap="10"
           xmlns="http://javafx.com/javafx/8.0.40" xmlns:fx="http://javafx.com/fxml/1"
           fx:controller="org.fxpart.ControllerNoItem">
 
+    <Button text="Change Item" fx:id="change" onAction="#change" GridPane.columnIndex="2" GridPane.rowIndex="0"/>
+    <Button text="Clear Item" fx:id="clear" onAction="#clear" GridPane.columnIndex="2" GridPane.rowIndex="1"/>
+
     <Label styleClass="table-view" text="Autosuggest: get location" GridPane.columnIndex="1" GridPane.rowIndex="1"/>
 
     <AutosuggestComboBoxList fx:id="autosuggest" GridPane.columnIndex="1" GridPane.rowIndex="2" prefWidth="300"
                              minWidth="300"/>
+
+    <Label styleClass="table-view" text="lazyMode" GridPane.columnIndex="3" GridPane.rowIndex="1"/>
+    <Label styleClass="table-view" text="acceptFreeTextValue" GridPane.columnIndex="3" GridPane.rowIndex="2"/>
+    <Label styleClass="table-view" text="visibleRowsCount" GridPane.columnIndex="3" GridPane.rowIndex="3"/>
+    <Label styleClass="table-view" text="editable" GridPane.columnIndex="3" GridPane.rowIndex="4"/>
+    <Label styleClass="table-view" text="isFullSearch" GridPane.columnIndex="3" GridPane.rowIndex="5"/>
+    <Label styleClass="table-view" text="ignoreCase" GridPane.columnIndex="3" GridPane.rowIndex="6"/>
+
+
+    <Label styleClass="table-view" text="     " fx:id="llazyMode" GridPane.columnIndex="4" GridPane.rowIndex="1"/>
+    <Label styleClass="table-view" text="     " fx:id="lacceptFreeTextValue" GridPane.columnIndex="4"
+           GridPane.rowIndex="2"/>
+    <Label styleClass="table-view" text="     " fx:id="lvisibleRowsCount" GridPane.columnIndex="4"
+           GridPane.rowIndex="3"/>
+    <Label styleClass="table-view" text="     " fx:id="leditable" GridPane.columnIndex="4" GridPane.rowIndex="4"/>
+    <Label styleClass="table-view" text="     " fx:id="lisFullSearch" GridPane.columnIndex="4" GridPane.rowIndex="5"/>
+    <Label styleClass="table-view" text="     " fx:id="lignoreCase" GridPane.columnIndex="4" GridPane.rowIndex="6"/>
+
 
     <columnConstraints>
         <ColumnConstraints maxWidth="216.0" minWidth="10.0" prefWidth="45.0"/>
