--- a/src/test/resources/org/fxpart/testWithItem.fxml
+++ b/src/test/resources/org/fxpart/testWithItem.fxml
@@ -3,7 +3,7 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 <?import org.fxpart.combobox.AutosuggestComboBoxList?>
-<GridPane alignment="center" hgap="10" prefHeight="441.0" prefWidth="924.0" vgap="10"
+<GridPane alignment="center" hgap="10"  prefHeight="800.0" prefWidth="1280.0" vgap="10"
           xmlns="http://javafx.com/javafx/8.0.40" xmlns:fx="http://javafx.com/fxml/1"
           fx:controller="org.fxpart.ControllerWithItem">
 
@@ -14,30 +14,22 @@
 
     <AutosuggestComboBoxList fx:id="autosuggest" GridPane.columnIndex="1" GridPane.rowIndex="2" prefWidth="300"
                              minWidth="300"/>
+    <TextField fx:id="itemOfAs" GridPane.columnIndex="1" GridPane.rowIndex="3" prefWidth="300"
+               minWidth="300"/>
 
-    <Label styleClass="table-view" text="lazyMode" GridPane.columnIndex="3" GridPane.rowIndex="1"/>
-    <Label styleClass="table-view" text="acceptFreeTextValue" GridPane.columnIndex="3" GridPane.rowIndex="2"/>
-    <Label styleClass="table-view" text="visibleRowsCount" GridPane.columnIndex="3" GridPane.rowIndex="3"/>
-    <Label styleClass="table-view" text="editable" GridPane.columnIndex="3" GridPane.rowIndex="4"/>
-    <Label styleClass="table-view" text="isFullSearch" GridPane.columnIndex="3" GridPane.rowIndex="5"/>
-    <Label styleClass="table-view" text="ignoreCase" GridPane.columnIndex="3" GridPane.rowIndex="6"/>
-
-
-    <Label styleClass="table-view" text="     " fx:id="llazyMode" GridPane.columnIndex="4" GridPane.rowIndex="1"/>
-    <Label styleClass="table-view" text="     " fx:id="lacceptFreeTextValue" GridPane.columnIndex="4"
-           GridPane.rowIndex="2"/>
-    <Label styleClass="table-view" text="     " fx:id="lvisibleRowsCount" GridPane.columnIndex="4"
-           GridPane.rowIndex="3"/>
-    <Label styleClass="table-view" text="     " fx:id="leditable" GridPane.columnIndex="4" GridPane.rowIndex="4"/>
-    <Label styleClass="table-view" text="     " fx:id="lisFullSearch" GridPane.columnIndex="4" GridPane.rowIndex="5"/>
-    <Label styleClass="table-view" text="     " fx:id="lignoreCase" GridPane.columnIndex="4" GridPane.rowIndex="6"/>
-
+    <CheckBox styleClass="table-view" fx:id="llazyMode" text="lazyMode" GridPane.columnIndex="3" GridPane.rowIndex="1"/>
+    <CheckBox styleClass="table-view" fx:id="lacceptFreeTextValue" text="acceptFreeTextValue" GridPane.columnIndex="3" GridPane.rowIndex="2"/>
+    <Label styleClass="table-view" fx:id="lvisibleRowsCount" text="visibleRowsCount" GridPane.columnIndex="3" GridPane.rowIndex="3"/>
+    <CheckBox styleClass="table-view" fx:id="leditable" text="editable" GridPane.columnIndex="3" GridPane.rowIndex="4"/>
+    <CheckBox styleClass="table-view" fx:id="lisFullSearch" text="isFullSearch" GridPane.columnIndex="3" GridPane.rowIndex="5"/>
+    <CheckBox styleClass="table-view" fx:id="lignoreCase" text="ignoreCase" GridPane.columnIndex="3" GridPane.rowIndex="6"/>
 
     <columnConstraints>
-        <ColumnConstraints maxWidth="216.0" minWidth="10.0" prefWidth="45.0"/>
+        <ColumnConstraints maxWidth="10.0" minWidth="10.0" prefWidth="45.0"/>
         <ColumnConstraints maxWidth="216.0" minWidth="10.0" prefWidth="191.0"/>
         <ColumnConstraints maxWidth="781.0" minWidth="184.0" prefWidth="184.0"/>
         <ColumnConstraints maxWidth="590.0" minWidth="197.0" prefWidth="197.0"/>
+        <ColumnConstraints maxWidth="203.0" minWidth="10.0" prefWidth="203.0"/>
         <ColumnConstraints maxWidth="203.0" minWidth="10.0" prefWidth="203.0"/>
     </columnConstraints>
     <rowConstraints>
