--- a/src/main/resources/org/fxpart/testNoItem.fxml
+++ b/src/main/resources/org/fxpart/testNoItem.fxml
@@ -1,8 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.*?>
-<?import javafx.scene.image.Image?>
-<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.*?>
 <?import org.fxpart.combobox.AutosuggestComboBoxList?>
 <GridPane alignment="center" hgap="10" prefHeight="800.0" prefWidth="1280.0" vgap="10"
@@ -15,19 +13,13 @@
     <Button text="Debug" fx:id="debug" onAction="#debug" GridPane.columnIndex="3" GridPane.rowIndex="1"/>
     <Label styleClass="table-view" text="noitem+free" GridPane.columnIndex="0" GridPane.rowIndex="2"/>
 
-<!--    <AutosuggestComboBoxList fx:id="autosuggest" GridPane.columnIndex="1" GridPane.rowIndex="2" prefWidth="300"
-                             minWidth="300" acceptFreeTextValue="true"/>-->
+    <AutosuggestComboBoxList fx:id="autosuggest" GridPane.columnIndex="1" GridPane.rowIndex="2" prefWidth="300"
+                             minWidth="300" acceptFreeTextValue="true"/>
 
     <Label styleClass="table-view" text="lazy" GridPane.columnIndex="0" GridPane.rowIndex="3"/>
     <HBox GridPane.columnIndex="1" GridPane.rowIndex="3">
         <AutosuggestComboBoxList fx:id="autosuggestLazy" prefWidth="300" minWidth="300" acceptFreeTextValue="false"
                                  lazyMode="true"/>
-        <ImageView fx:id="loadIndicator" disable="false" fitHeight="24.0" fitWidth="24.0" pickOnBounds="true"
-                   visible="false" preserveRatio="true">
-            <image>
-                <Image url="@combobox/gauge.png"/>
-            </image>
-        </ImageView>
     </HBox>
 
     <columnConstraints>
