--- a/src/main/resources/org/fxpart/testWithItem.fxml
+++ b/src/main/resources/org/fxpart/testWithItem.fxml
@@ -7,8 +7,8 @@
           xmlns="http://javafx.com/javafx/8.0.40" xmlns:fx="http://javafx.com/fxml/1"
           fx:controller="org.fxpart.ControllerWithItem">
 
-    <Button text="Change KV" fx:id="change" onAction="#changeKV" GridPane.columnIndex="2" GridPane.rowIndex="0"/>
-    <Button text="Change mProp" fx:id="changeP" onAction="#change" GridPane.columnIndex="2" GridPane.rowIndex="1"/>
+    <Button text="Change T KV" fx:id="change" onAction="#changeT" GridPane.columnIndex="2" GridPane.rowIndex="0"/>
+    <Button text="Change B Prop" fx:id="changeP" onAction="#changeB" GridPane.columnIndex="2" GridPane.rowIndex="1"/>
     <Button text="Clear Item" fx:id="clear" onAction="#clear" GridPane.columnIndex="3" GridPane.rowIndex="0"/>
     <Button text="Debug" fx:id="debug" onAction="#debug" GridPane.columnIndex="3" GridPane.rowIndex="1"/>
     <Label styleClass="table-view" text="Autosuggest: get location" GridPane.columnIndex="1" GridPane.rowIndex="1"/>
