--- a/src/main/resources/org/fxpart/testNoItem.fxml
+++ b/src/main/resources/org/fxpart/testNoItem.fxml
@@ -2,7 +2,7 @@
 
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
-<?import org.fxpart.combobox.AutosuggestComboBoxList?>
+<?import org.fxpart.combobox.AutosuggestFX?>
 <GridPane alignment="center" hgap="10" prefHeight="800.0" prefWidth="1280.0" vgap="10"
           xmlns="http://javafx.com/javafx/8.0.40" xmlns:fx="http://javafx.com/fxml/1"
           fx:controller="org.fxpart.ControllerNoItem">
@@ -13,12 +13,12 @@
     <Button text="Debug" fx:id="debug" onAction="#debug" GridPane.columnIndex="3" GridPane.rowIndex="1"/>
     <Label styleClass="table-view" text="noitem+free" GridPane.columnIndex="0" GridPane.rowIndex="2"/>
 
-    <AutosuggestComboBoxList fx:id="autosuggest" GridPane.columnIndex="1" GridPane.rowIndex="2" prefWidth="300"
+    <AutosuggestFX fx:id="autosuggest" GridPane.columnIndex="1" GridPane.rowIndex="2" prefWidth="300"
                              minWidth="300" acceptFreeTextValue="true"/>
 
     <Label styleClass="table-view" text="lazy" GridPane.columnIndex="0" GridPane.rowIndex="3"/>
     <HBox GridPane.columnIndex="1" GridPane.rowIndex="3">
-        <AutosuggestComboBoxList fx:id="autosuggestLazy" prefWidth="300" minWidth="300" acceptFreeTextValue="false"
+        <AutosuggestFX fx:id="autosuggestLazy" prefWidth="300" minWidth="300" acceptFreeTextValue="false"
                                  lazyMode="true"/>
     </HBox>
 
