--- a/src/main/resources/org/fxpart/testWithItem.fxml
+++ b/src/main/resources/org/fxpart/testWithItem.fxml
@@ -2,7 +2,7 @@
 
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
-<?import org.fxpart.combobox.AutosuggestComboBoxList?>
+<?import org.fxpart.combobox.AutosuggestFX?>
 <GridPane alignment="center" hgap="10" prefHeight="800.0" prefWidth="1280.0" vgap="10"
           xmlns="http://javafx.com/javafx/8.0.40" xmlns:fx="http://javafx.com/fxml/1"
           fx:controller="org.fxpart.ControllerWithItem">
@@ -13,7 +13,7 @@
     <Button text="Debug" fx:id="debug" onAction="#debug" GridPane.columnIndex="3" GridPane.rowIndex="1"/>
     <Label styleClass="table-view" text="Autosuggest: get location" GridPane.columnIndex="1" GridPane.rowIndex="1"/>
 
-    <AutosuggestComboBoxList fx:id="autosuggest" GridPane.columnIndex="1" GridPane.rowIndex="2" prefWidth="300"
+    <AutosuggestFX fx:id="autosuggest" GridPane.columnIndex="1" GridPane.rowIndex="2" prefWidth="300"
                              minWidth="300" acceptFreeTextValue="false"/>
 
     <columnConstraints>
