--- a/src/main/resources/org/fxpart/testMatrix.fxml
+++ b/src/main/resources/org/fxpart/testMatrix.fxml
@@ -24,7 +24,7 @@
     <Label text="editable" GridPane.columnIndex="0" GridPane.rowIndex="4"/>
     <Label text="fullSearch" GridPane.columnIndex="0" GridPane.rowIndex="5"/>
     <Label text="ignoreCase" GridPane.columnIndex="0" GridPane.rowIndex="6"/>
-    <Label text="loadingIndicator" GridPane.columnIndex="0" GridPane.rowIndex="7"/>
+    <Label text="filteringIndicator" GridPane.columnIndex="0" GridPane.rowIndex="7"/>
     <Label text="searchStatus" GridPane.columnIndex="0" GridPane.rowIndex="8"/>
     <Label text="controlShown" GridPane.columnIndex="0" GridPane.rowIndex="9"/>
     <Label text="searchFunction" GridPane.columnIndex="0" GridPane.rowIndex="10"/>
